--- a/NewYearGreetingCards/AndroidManifest.xml
+++ b/NewYearGreetingCards/AndroidManifest.xml
@@ -48,4 +48,10 @@
 </manifest>
 gurumohanreddy
 Gurumokshithreddy
+hfdsgfaklked;edgkj
+sdjfdlkdjeklw;stf
+asfkjhelkrldkcw
+ASZEdxnwldsjxfkjcw
+sArfnceldzxkdlxlawsdgxkhvaw
+
 Maheswari
